# showbible.io

./: .gitignore  2026-05-03-room-writers-framework-design.md  2026-05-03-textual-tui-design.md  2026-05-03-textual-tui-plan.md  2026-05-03-tui-dashboard-restructure-design.md  2026-05-03-tui-dashboard-restructure-plan.md  README.md  pyproject.toml
docs/: README.md  architecture.md  cli-reference.md  concepts.md  development.md  getting-started.md  interfaces.md  pipeline.md  providers.md  vault-layout.md
showbible/: __init__.py  artifacts.py  cli.py  engine.py  providers.py  server.py  vault.py
showbible/tui/: __init__.py  app.py  runs.py  state.py
showbible/tui/panes/: __init__.py  arc.py  base.py  cast.py  episodes.py  lore.py  outputs.py  run_detail.py
showbible/tui/screens/: __init__.py  add_arc_beat.py  add_cast.py  add_lore.py  ai_suggest.py  confirm.py  doctor.py  snapshot.py
showbible/tui/widgets/: __init__.py  entity_form.py  sidebar.py
showbible/ui/: index.html
tests/: test_showbible.py  test_tui_smoke.py
