[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "showbible"
version = "0.1.0"
description = "Open-source AI writers room framework"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Eric Grill" }]
license = { text = "MIT" }
keywords = ["screenwriting", "llm", "cli", "writers-room"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Artistic Software",
]
dependencies = ["textual>=0.86"]

[project.scripts]
showbible = "showbible.cli:main"
bible = "showbible.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["showbible*"]

[tool.setuptools.package-data]
showbible = ["ui/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.0",
]
